# Temple-Builder

./: README.md  pyproject.toml  requirements.txt  temple.ex.yml
temple/: __init__.py  cli.py
temple/builder/: configs.py  group.py  package.py  workspaces.py
temple/cli_cmds/: cmds.py  info.py  virtual_env.py  workspace.py
temple/internal/: edition.py  files.py  runner.py  yml.py
